--- a/iths/feu21/react/index.html
+++ b/iths/feu21/react/index.html
@@ -287,12 +287,11 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><a href="props-children/excercises.html">&#xD6;vningar</a></li>
 <li><a href="props-children/bootstrap.html">Extra &#xF6;vning - Bootstrap</a></li>
 </ul>
-<h2 class="mume-header" id="usestate">useState</h2>
+<h2 class="mume-header" id="css">CSS</h2>
 
-<h2 class="mume-header" id="listor">Listor</h2>
-
-<h2 class="mume-header" id="formul%C3%A4rkomponenter">Formul&#xE4;rkomponenter</h2>
-
+<ul>
+<li><a href="css">F&#xF6;rel&#xE4;sning</a></li>
+</ul>
 
       </div>
       
