update modules to module

--- a/iths/feu21/react/css/index.html
+++ b/iths/feu21/react/css/index.html
@@ -332,7 +332,7 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <ul>
 <li>CSS Modules &#xE4;r ett annat s&#xE4;tt att ha <em>scoped styling</em></li>
-<li>En fil f&#xF6;r CSS-moduler har fil&#xE4;ndelsen <em>.modules.css</em></li>
+<li>En fil f&#xF6;r CSS-moduler har fil&#xE4;ndelsen <em>.module.css</em></li>
 <li>I den filen skriver man helt vanliga CSS-klasser</li>
 <li>Genom att importera filen i komponenten f&#xE5;r man tillg&#xE5;ng till CSS-klasserna och kan applicera p&#xE5; olika element via className</li>
 </ul>
