--- a/iths/feu21/react/kaffeappen-workbook/index.html
+++ b/iths/feu21/react/kaffeappen-workbook/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>index</title>
+      <title>workbook</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,41 +261,21 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="material-till-reactdelen">Material till Reactdelen</h1>
+      <h1 class="mume-header" id="kaffeappen-workbook">Kaffeappen Workbook</h1>
 
-<h2 class="mume-header" id="f%C3%B6rberedande-uppgifter">F&#xF6;rberedande uppgifter</h2>
+<p><em>Vi ska bygga en app - Kaffeappen - som &#xE4;r ett mobilt inloggningsfl&#xF6;de enligt nedanst&#xE5;ende Figmaskiss</em>:</p>
+<p><a href="https://www.figma.com/file/jOdaYhLbsmEBRXC9pItIbW/Kaffeappen?node-id=324%3A251">https://www.figma.com/file/jOdaYhLbsmEBRXC9pItIbW/Kaffeappen?node-id=324%3A251</a></p>
+<h2 class="mume-header" id="kom-ig%C3%A5ng">Kom ig&#xE5;ng</h2>
 
 <ul>
-<li><a href="preparation">Repetitionsuppgifter inf&#xF6;r React</a></li>
+<li>Starta ett nytt Create React Project som heter Kaffeappen (gl&#xF6;m inte Typescript)</li>
 </ul>
-<h2 class="mume-header" id="intro-react">Intro React</h2>
+<h2 class="mume-header" id="del-1-atomer">Del 1) Atomer</h2>
 
 <ul>
-<li><a href="intro">F&#xF6;rel&#xE4;sning</a></li>
-<li><a href="intro/excercises.html">&#xD6;vningar</a></li>
-</ul>
-<h2 class="mume-header" id="create-react-app">Create React App</h2>
-
-<ul>
-<li><a href="create-react-app">F&#xF6;rel&#xE4;sning</a></li>
-<li><a href="create-react-app/excercises.html">&#xD6;vningar</a></li>
-</ul>
-<h2 class="mume-header" id="props-children">Props &amp; Children</h2>
-
-<ul>
-<li><a href="props-children">F&#xF6;rel&#xE4;sning</a></li>
-<li><a href="props-children/excercises.html">&#xD6;vningar</a></li>
-<li><a href="props-children/bootstrap.html">Extra &#xF6;vning - Bootstrap</a></li>
-</ul>
-<h2 class="mume-header" id="css">CSS</h2>
-
-<ul>
-<li><a href="css">F&#xF6;rel&#xE4;sning</a></li>
-</ul>
-<h2 class="mume-header" id="kaffeappen-workbook">Kaffeappen - workbook</h2>
-
-<ul>
-<li><a href="kaffeappen-workbook">Workbook</a></li>
+<li>Som steg ett ska vi bygga de minsta komponenter som appen utg&#xF6;rs av - atomerna.</li>
+<li>Skapa en komponent i taget och l&#xE4;nka in i App.tsx f&#xF6;r att testa att de funkar</li>
+<li>Demo: <a href="https://kaffeappen-tvnug.ondigitalocean.app/">https://kaffeappen-tvnug.ondigitalocean.app/</a></li>
 </ul>
 
       </div>
