--- a/iths/wu21/react/index.html
+++ b/iths/wu21/react/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>wu21</title>
+      <title>index</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -272,16 +272,19 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <ul>
 <li><a href="intro">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="intro/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="create-react-app">Create React App</h2>
 
 <ul>
 <li><a href="create-react-app">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="create-react-app/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="props-children">Props &amp; Children</h2>
 
 <ul>
 <li><a href="props-children">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="props-children/excercises.html">&#xD6;vningar</a></li>
 </ul>
 
       </div>
