--- a/iths/wu21/react/index.html
+++ b/iths/wu21/react/index.html
@@ -266,7 +266,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <h2 class="mume-header" id="f%C3%B6rberedande-uppgifter">F&#xF6;rberedande uppgifter</h2>
 
 <ul>
-<li><a href="preparation">Repetitionsuppgifter inf&#xF6;r React</a></li>
+<li><a href="preparation/excercises.html">Repetitionsuppgifter inf&#xF6;r React</a></li>
 </ul>
 <h2 class="mume-header" id="intro-react">Intro React</h2>
 
