--- a/iths/feu21/receptsajten/assignment.html
+++ b/iths/feu21/receptsajten/assignment.html
@@ -305,6 +305,12 @@
 </tr>
 <tr>
 <td style="text-align:left">GET</td>
+<td style="text-align:left"><code>/recipes?search=abc</code></td>
+<td>-</td>
+<td>H&#xE4;mtar alla recept filtrerade p&#xE5; en s&#xF6;kstr&#xE4;ng</td>
+</tr>
+<tr>
+<td style="text-align:left">GET</td>
 <td style="text-align:left"><code>/recipes/:recipeId</code></td>
 <td>-</td>
 <td>H&#xE4;mtar all information f&#xF6;r ett recept</td>
