--- a/iths/feu21/receptsajten/assignment.html
+++ b/iths/feu21/receptsajten/assignment.html
@@ -323,7 +323,7 @@
 </tr>
 <tr>
 <td style="text-align:left">GET</td>
-<td style="text-align:left"><code>/category/:categoryId/recipe</code></td>
+<td style="text-align:left"><code>/category/:categoryId/recipes</code></td>
 <td>-</td>
 <td>H&#xE4;mtar recept f&#xF6;r en viss kategori</td>
 </tr>
