--- a/iths/feu21/react/index.html
+++ b/iths/feu21/react/index.html
@@ -292,6 +292,11 @@ pre[data-line] .line-highlight[data-end]:after {
 <ul>
 <li><a href="css">F&#xF6;rel&#xE4;sning</a></li>
 </ul>
+<h2 class="mume-header" id="events">Events</h2>
+
+<ul>
+<li><a href="events">F&#xF6;rel&#xE4;sning</a></li>
+</ul>
 <h2 class="mume-header" id="kaffeappen-workbook">Kaffeappen - workbook</h2>
 
 <ul>
