--- a/iths/feu21/receptsajten/assignment.html
+++ b/iths/feu21/receptsajten/assignment.html
@@ -75,6 +75,11 @@
 <td style="text-align:left">Betyg p&#xE5; receptet (1-5)</td>
 </tr>
 <tr>
+<td style="text-align:left">category</td>
+<td style="text-align:left"><code>array&lt;string&gt;</code></td>
+<td style="text-align:left">Kategorier</td>
+</tr>
+<tr>
 <td style="text-align:left">ingrediensts</td>
 <td style="text-align:left"><code>array&lt;Ingredient&gt;</code></td>
 <td style="text-align:left">Ingredienser i receptet</td>
@@ -216,6 +221,12 @@
 <td style="text-align:left"><code>/category/:categoryId/recipes</code></td>
 <td>-</td>
 <td>H&#xE4;mtar recept f&#xF6;r en viss kategori</td>
+</tr>
+<tr>
+<td style="text-align:left">GET</td>
+<td style="text-align:left"><code>/category/:categoryId/recipes?search=abc</code></td>
+<td>-</td>
+<td>H&#xE4;mtar alla recept i en kategori filtrerade p&#xE5; en s&#xF6;kstr&#xE4;ng</td>
 </tr>
 </tbody>
 </table>
