--- a/iths/feu21/react/kaffeappen-workbook/index.html
+++ b/iths/feu21/react/kaffeappen-workbook/index.html
@@ -21,6 +21,7 @@
 
 <p><em>Vi ska bygga en app - Kaffeappen - som &#xE4;r ett mobilt inloggningsfl&#xF6;de enligt nedanst&#xE5;ende Figmaskiss</em>:</p>
 <p><a href="https://www.figma.com/file/jOdaYhLbsmEBRXC9pItIbW/Kaffeappen?node-id=324%3A251">https://www.figma.com/file/jOdaYhLbsmEBRXC9pItIbW/Kaffeappen?node-id=324%3A251</a></p>
+<p>Demo: <a href="https://kaffeappen-tvnug.ondigitalocean.app/">https://kaffeappen-tvnug.ondigitalocean.app/</a></p>
 <h2 class="mume-header" id="kom-ig%C3%A5ng" ebook-toc-level-2 heading="Kom ig&amp;#xE5;ng">Kom ig&#xE5;ng</h2>
 
 <ul>
@@ -31,7 +32,7 @@
 <ul>
 <li>Som steg ett ska vi bygga de minsta komponenter som appen utg&#xF6;rs av - atomerna.</li>
 <li>Skapa en komponent i taget och l&#xE4;nka in i App.tsx f&#xF6;r att testa att de funkar</li>
-<li>Demo: <a href="https://kaffeappen-tvnug.ondigitalocean.app/">https://kaffeappen-tvnug.ondigitalocean.app/</a></li>
+<li>L&#xF6;sning: <a href="https://github.com/jonatanhallenberg/kaffeappen-solution/tree/1-atoms/src">https://github.com/jonatanhallenberg/kaffeappen-solution/tree/1-atoms/src</a></li>
 </ul>
 <h2 class="mume-header" id="2-atomer-events" ebook-toc-level-2 heading="2) Atomer - events">2) Atomer - events</h2>
 
@@ -43,6 +44,7 @@
 <ul>
 <li>Skapa ett formul&#xE4;r f&#xF6;r <em>inloggning</em> och ett f&#xF6;r <em>registrering</em></li>
 <li>Bygg in validering i formul&#xE4;ren och skicka upp formul&#xE4;rdata till parentkomponenten n&#xE4;r man trycker p&#xE5; knappen</li>
+<li>Demo:</li>
 </ul>
 <p><em>To be continued...</em></p>
 </div></body></html>
