--- a/iths/wu21/react/index.html
+++ b/iths/wu21/react/index.html
@@ -287,6 +287,12 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><a href="props-children/excercises.html">&#xD6;vningar</a></li>
 <li><a href="props-children/bootstrap.html">Extra &#xF6;vning - Bootstrap</a></li>
 </ul>
+<h2 class="mume-header" id="css">CSS</h2>
+
+<ul>
+<li><a href="css">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="css/excercises.html">&#xD6;vningar</a></li>
+</ul>
 
       </div>
       
