--- a/iths/feu21/receptsajten/assignment.html
+++ b/iths/feu21/receptsajten/assignment.html
@@ -373,14 +373,7 @@
 <hr>
 <h2 class="mume-header" id="kom-ig%C3%A5ng-tips" ebook-toc-level-2 heading="Kom ig&amp;#xE5;ng tips!">Kom ig&#xE5;ng tips!</h2>
 
-<ul>
-<li>Skapa en katalog och initiera ett tomt Git-repo. H&#xE4;r ska det ligga tv&#xE5; kataloger:
-<ul>
-<li>Katalog f&#xF6;r backend som heter t.ex. api, server eller liknande</li>
-<li>Katalog f&#xF6;r frontend som automatiskt skapas n&#xE4;r du initierar ett Create React App-projekt</li>
-</ul>
-</li>
-</ul>
+<p>B&#xF6;rja med att f&#xF6;lja instruktionerna f&#xF6;r att initiera ett <a href="file:///Users/jonatan/OneDrive - Sprinto Sweden AB/Utbildningar/Material/jonatanhallenberg.github.io/iths/feu21/receptsajten/setup-monorepo.html">monorepo</a></p>
 <p><em>Backend</em></p>
 <ul>
 <li>Initiera npm</li>
@@ -394,6 +387,7 @@ npx tsc --init
 </pre><ul>
 <li>Installera alla dependencies som kr&#xE4;vs f&#xF6;r att bygga en express-applikation med Mongoose</li>
 <li>Skapa server.ts och l&#xE4;gg in grundkoden f&#xF6;r en express-app</li>
+<li>L&#xE4;gg till en .gitignore-fil och l&#xE4;gg in &quot;node_modules&quot;</li>
 <li>Testa att servern funkar!</li>
 </ul>
 <p><em>Frontend</em></p>
