--- a/iths/feu21/receptsajten/assignment.html
+++ b/iths/feu21/receptsajten/assignment.html
@@ -66,7 +66,7 @@
 </tr>
 <tr>
 <td style="text-align:left">timeInMins</td>
-<td style="text-align:left">string</td>
+<td style="text-align:left">int</td>
 <td style="text-align:left">Antal minuter det tar att laga receptet</td>
 </tr>
 <tr>
@@ -86,7 +86,7 @@
 </tr>
 <tr>
 <td style="text-align:left">instructions</td>
-<td style="text-align:left"><code>array&lt;Instruction&gt;</code></td>
+<td style="text-align:left"><code>array&lt;string&gt;</code></td>
 <td style="text-align:left">Instruktioner till receptet</td>
 </tr>
 <tr>
@@ -122,30 +122,6 @@
 <td style="text-align:left">unit</td>
 <td style="text-align:left">string</td>
 <td style="text-align:left">Enhet som m&#xE4;ngden anges i, t.ex. msk, tsk, gram..</td>
-</tr>
-</tbody>
-</table>
-<ul>
-<li>Ett instruction-objekt ska inneh&#xE5;lla f&#xF6;ljande egenskaper. Du f&#xE5;r l&#xE4;gga till fler om du beh&#xF6;ver, men f&#xE5;r inte ta bort n&#xE5;gra:</li>
-</ul>
-<table>
-<thead>
-<tr>
-<th style="text-align:left">Egenskap</th>
-<th style="text-align:left">Datatyp</th>
-<th style="text-align:left">V&#xE4;rde</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">instruction</td>
-<td style="text-align:left">string</td>
-<td style="text-align:left">Beskrivning av vad man ska g&#xF6;ra</td>
-</tr>
-<tr>
-<td style="text-align:left">prio</td>
-<td style="text-align:left">int</td>
-<td style="text-align:left">Var i ordningen instruktionen kommer</td>
 </tr>
 </tbody>
 </table>
@@ -373,7 +349,7 @@
 <hr>
 <h2 class="mume-header" id="kom-ig%C3%A5ng-tips" ebook-toc-level-2 heading="Kom ig&amp;#xE5;ng tips!">Kom ig&#xE5;ng tips!</h2>
 
-<p>B&#xF6;rja med att f&#xF6;lja instruktionerna f&#xF6;r att initiera ett <a href="file:///Users/jonatan/OneDrive - Sprinto Sweden AB/Utbildningar/Material/jonatanhallenberg.github.io/iths/feu21/receptsajten/setup-monorepo.html">monorepo</a></p>
+<p>B&#xF6;rja med att f&#xF6;lja instruktionerna f&#xF6;r att initiera ett <a href="setup-monorepo.html">monorepo</a></p>
 <p><em>Backend</em></p>
 <ul>
 <li>Initiera npm</li>
