--- a/iths/feu21/receptsajten/assignment.html
+++ b/iths/feu21/receptsajten/assignment.html
@@ -188,19 +188,19 @@
 </tr>
 <tr>
 <td style="text-align:left">GET</td>
-<td style="text-align:left"><code>/category</code></td>
+<td style="text-align:left"><code>/categories</code></td>
 <td>-</td>
 <td>H&#xE4;mtar alla kategorier</td>
 </tr>
 <tr>
 <td style="text-align:left">GET</td>
-<td style="text-align:left"><code>/category/:categoryId/recipes</code></td>
+<td style="text-align:left"><code>/categories/:categoryName/recipes</code></td>
 <td>-</td>
 <td>H&#xE4;mtar recept f&#xF6;r en viss kategori</td>
 </tr>
 <tr>
 <td style="text-align:left">GET</td>
-<td style="text-align:left"><code>/category/:categoryId/recipes?search=abc</code></td>
+<td style="text-align:left"><code>/categories/:categoryName/recipes?search=abc</code></td>
 <td>-</td>
 <td>H&#xE4;mtar alla recept i en kategori filtrerade p&#xE5; en s&#xF6;kstr&#xE4;ng</td>
 </tr>
