--- a/iths/feu21/react/index.html
+++ b/iths/feu21/react/index.html
@@ -301,24 +301,25 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <ul>
 <li><a href="use-state">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="use-state/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="listor">Listor</h2>
 
 <ul>
 <li><a href="listor">F&#xF6;rel&#xE4;sning</a></li>
-<li><a href="listor/exercises.html">&#xD6;vningar</a></li>
+<li><a href="listor/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="fetch">Fetch</h2>
 
 <ul>
 <li><a href="fetch">F&#xF6;rel&#xE4;sning</a></li>
-<li><a href="fetch/exercises.html">&#xD6;vningar</a></li>
+<li><a href="fetch/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="conditional-rendering">Conditional rendering</h2>
 
 <ul>
 <li><a href="conditional-rendering">F&#xF6;rel&#xE4;sning</a></li>
-<li><a href="conditional-rendering/exercises.html">&#xD6;vningar</a></li>
+<li><a href="conditional-rendering/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="kaffeappen-workbook">Kaffeappen - workbook</h2>
 
