--- a/iths/wu21/react/index.html
+++ b/iths/wu21/react/index.html
@@ -293,6 +293,27 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><a href="css">F&#xF6;rel&#xE4;sning</a></li>
 <li><a href="css/excercises.html">&#xD6;vningar</a></li>
 </ul>
+<h2 class="mume-header" id="events">Events</h2>
+
+<ul>
+<li><a href="events">F&#xF6;rel&#xE4;sning</a></li>
+</ul>
+<h2 class="mume-header" id="usestate">useState</h2>
+
+<ul>
+<li><a href="useState">F&#xF6;rel&#xE4;sning</a></li>
+</ul>
+<h2 class="mume-header" id="listor">Listor</h2>
+
+<ul>
+<li><a href="listor">F&#xF6;rel&#xE4;sning</a></li>
+</ul>
+<h2 class="mume-header" id="fetch">Fetch</h2>
+
+<ul>
+<li><a href="fetch">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="fetch/exercises.html">&#xD6;vningar</a></li>
+</ul>
 
       </div>
       
