--- a/iths/wu21/react/index.html
+++ b/iths/wu21/react/index.html
@@ -297,16 +297,19 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <ul>
 <li><a href="events">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="events/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="usestate">useState</h2>
 
 <ul>
 <li><a href="useState">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="useState/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="listor">Listor</h2>
 
 <ul>
 <li><a href="listor">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="listor/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="fetch">Fetch</h2>
 
