--- a/iths/feu21/react/index.html
+++ b/iths/feu21/react/index.html
@@ -321,6 +321,11 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><a href="conditional-rendering">F&#xF6;rel&#xE4;sning</a></li>
 <li><a href="conditional-rendering/excercises.html">&#xD6;vningar</a></li>
 </ul>
+<h2 class="mume-header" id="redux">Redux</h2>
+
+<ul>
+<li><a href="redux">F&#xF6;rel&#xE4;sning</a></li>
+</ul>
 <h2 class="mume-header" id="kaffeappen-workbook">Kaffeappen - workbook</h2>
 
 <ul>
