--- a/iths/feu21/react/index.html
+++ b/iths/feu21/react/index.html
@@ -325,6 +325,7 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <ul>
 <li><a href="redux">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="redux/excercises.html">&#xD6;vningar</a></li>
 </ul>
 <h2 class="mume-header" id="kaffeappen-workbook">Kaffeappen - workbook</h2>
 
