--- a/iths/wu21/react/index.html
+++ b/iths/wu21/react/index.html
@@ -317,6 +317,12 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><a href="fetch">F&#xF6;rel&#xE4;sning</a></li>
 <li><a href="fetch/exercises.html">&#xD6;vningar</a></li>
 </ul>
+<h2 class="mume-header" id="conditional-rendering">Conditional rendering</h2>
+
+<ul>
+<li><a href="conditional-rendering">F&#xF6;rel&#xE4;sning</a></li>
+<li><a href="conditional-rendering/exercises.html">&#xD6;vningar</a></li>
+</ul>
 
       </div>
       
