--- a/iths/wu21/react/index.html
+++ b/iths/wu21/react/index.html
@@ -323,10 +323,10 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><a href="conditional-rendering">F&#xF6;rel&#xE4;sning</a></li>
 <li><a href="conditional-rendering/exercises.html">&#xD6;vningar</a></li>
 </ul>
-<h2 class="mume-header" id="deployment">Deployment</h2>
+<h2 class="mume-header" id="redux">Redux</h2>
 
 <ul>
-<li><a href="deployment">Instruktion</a></li>
+<li><a href="redux">F&#xF6;rel&#xE4;sning</a></li>
 </ul>
 
       </div>
