add one more exercise

--- a/iths/jsu21/testning-och-typescript/lektion-1/exercises/typescript-exercises.html
+++ b/iths/jsu21/testning-och-typescript/lektion-1/exercises/typescript-exercises.html
@@ -300,6 +300,25 @@ npx tsc --init
 <p><img src="20221118221427.png" alt></p>
 <p><strong>5) Array / Funktion / Interface</strong></p>
 <p><img src="20221118221539.png" alt></p>
+<p><strong>6) Konfigurera projekt</strong></p>
+<p>Titta p&#xE5; filmen <a href="https://www.youtube.com/watch?v=Y4IiQY9dNRA">https://www.youtube.com/watch?v=Y4IiQY9dNRA</a></p>
+<ul>
+<li>Konfigurera upp ett nytt projekt med f&#xF6;ljande filstruktur:
+<ul>
+<li>public
+<ul>
+<li>H&#xE4;r hamnar alla js-filer som ska deployas</li>
+</ul>
+</li>
+<li>src
+<ul>
+<li>H&#xE4;r ligger alla ts-filer</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Se till att endast ts-filer i src-mappen kompileras n&#xE4;r man k&#xF6;r &apos;npx tsc&apos;</li>
+</ul>
 
       </div>
       
